add games pages

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <link rel="stylesheet" href="css/swiper-bundle.min.css">
 </head>
 <body>
+
+    <div class="progress">
+        <div class="scroll-bar" id="scroll-bar"></div>
+    </div>
     
 <header>
     <div class="nav container">
@@ -185,7 +189,7 @@
                             <i class='bx bxs-star' style='color:#fffa00'></i>
                             <span>4.9</span>
                         </div>
-                        <a href="#" class="box-btn"><i class='bx bx-down-arrow-alt' style='color:#0069ff'></i></a>
+                        <a href="download_callOfDuty.html" class="box-btn"><i class='bx bx-down-arrow-alt' style='color:#0069ff'></i></a>
                     </div>
                 </div>
             </div>
@@ -202,7 +206,7 @@
                             <i class='bx bxs-star' style='color:#fffa00'></i>
                             <span>4.9</span>
                         </div>
-                        <a href="#" class="box-btn"><i class='bx bx-down-arrow-alt' style='color:#0069ff'></i></a>
+                        <a href="download_minecraft.html" class="box-btn"><i class='bx bx-down-arrow-alt' style='color:#0069ff'></i></a>
                     </div>
                 </div>
             </div>
@@ -219,7 +223,7 @@
                             <i class='bx bxs-star' style='color:#fffa00'></i>
                             <span>4.9</span>
                         </div>
-                        <a href="#" class="box-btn"><i class='bx bx-down-arrow-alt' style='color:#0069ff'></i></a>
+                        <a href="download_fifa.html" class="box-btn"><i class='bx bx-down-arrow-alt' style='color:#0069ff'></i></a>
                     </div>
                 </div>
             </div>
@@ -236,7 +240,7 @@
                             <i class='bx bxs-star' style='color:#fffa00'></i>
                             <span>4.9</span>
                         </div>
-                        <a href="#" class="box-btn"><i class='bx bx-down-arrow-alt' style='color:#0069ff'></i></a>
+                        <a href="download_destiny.html" class="box-btn"><i class='bx bx-down-arrow-alt' style='color:#0069ff'></i></a>
                     </div>
                 </div>
             </div>
@@ -253,7 +257,7 @@
                             <i class='bx bxs-star' style='color:#fffa00'></i>
                             <span>4.9</span>
                         </div>
-                        <a href="#" class="box-btn"><i class='bx bx-down-arrow-alt' style='color:#0069ff'></i></a>
+                        <a href="download_mario.html" class="box-btn"><i class='bx bx-down-arrow-alt' style='color:#0069ff'></i></a>
                     </div>
                 </div>
             </div>
@@ -270,18 +274,12 @@
                             <i class='bx bxs-star' style='color:#fffa00'></i>
                             <span>4.9</span>
                         </div>
-                        <a href="#" class="box-btn"><i class='bx bx-down-arrow-alt' style='color:#0069ff'></i></a>
+                        <a href="download_godOfWar.html" class="box-btn"><i class='bx bx-down-arrow-alt' style='color:#0069ff'></i></a>
                     </div>
                 </div>
             </div>
         </div>
 </section>
-
-
-
-
-
-
 
 
 <footer>
