add media screen

--- a/download_callOfDuty.html
+++ b/download_callOfDuty.html
@@ -12,6 +12,10 @@
 </head>
 <body>
     
+    <div class="progress">
+        <div class="scroll-bar" id="scroll-bar"></div>
+    </div>
+
 <header>
     <div class="nav container">
         <a href="index.html" class="logo">GTA<span>Store</span></a>
