--- a/download_mario.html
+++ b/download_mario.html
@@ -11,6 +11,10 @@
     <link rel="stylesheet" href="css/swiper-bundle.min.css">
 </head>
 <body>
+
+    <div class="progress">
+        <div class="scroll-bar" id="scroll-bar"></div>
+    </div>
     
 <header>
     <div class="nav container">
