--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
         <div class="menu">
             <img src="./img/image 1.svg" alt="logo_Games">
             <ul class="navbar">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="#trending">Trending</a></li>
-                <li><a href="#new">New Games</a></li>
-                <li><a href="#action">Action Games</a></li>
-                <li><a href="#contact">Contact Us</a></li>
+                <li><a href="index.html" class="js-scroll">Home</a></li>
+                <li><a href="#trending" class="js-scroll">Trending</a></li>
+                <li><a href="#new" class="js-scroll">New Games</a></li>
+                <li><a href="#action" class="js-scroll">Action Games</a></li>
+                <li><a href="#contact" class="js-scroll">Contact Us</a></li>
             </ul>
         </div>
         <div class="notification">
@@ -61,7 +61,7 @@
 </section>
 
 <!-- Trending -->
-<section class="trending_section container">
+<section class="trending_section container" id="trending">
     <div class="trend">
 <img src="./img/sale.svg" alt="sale" class="sale_image">
 <h3 class="trending_text">Trending Games</h3>
@@ -170,7 +170,7 @@
 
 
 <!-- Another Games -->
-<section class="another_section container">
+<section class="another_section container" id="new">
     <div class="another">
 <img src="./img/another_game.svg" alt="sale" class="sale_image">
 <h3 class="trending_text">Another Games</h3>
@@ -283,7 +283,7 @@
 
 
 <footer>
-    <div class="container-footer">
+    <div class="container-footer" id="contact">
         <a href="index.html" class="logo"> <img src="./img/GTAStore.svg" alt="logo_GTAStore" class="image_logo"></a>
         <h3 class="author">@ kate_shevchenko all right reserved</h3>
  </div>
